# code-trace

./: CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: 2026-07-01-code-trace-privacy-controls.md  langfuse_hook.py
docs/superpowers/plans/: 2026-04-10-code-trace-rust.md  2026-05-11-unified-config-file.md
docs/superpowers/specs/: 2026-05-11-unified-config-file-design.md  2026-07-21-mask-secrets-design.md  2026-07-21-require-git-repo-design.md
harness/: Dockerfile  NOTES.md  README.md  docker-compose.yml  run-scenarios.sh
harness/stub-model/: server.py
openspec/changes/add-integration-harness/: design.md  tasks.md
openspec/changes/add-privacy-controls/: design.md  proposal.md  tasks.md
openspec/changes/fix-first-contact-backlog/: design.md
openspec/changes/fix-paused-turn-replay/: proposal.md  tasks.md
openspec/changes/fix-state-locking/: proposal.md
openspec/specs/claude-seam-tests/: spec.md
openspec/specs/cli-dispatch/: spec.md
openspec/specs/concurrency-tests/: spec.md
openspec/specs/fake-langfuse/: spec.md
openspec/specs/first-contact-cap/: spec.md
openspec/specs/private-mode/: spec.md
openspec/specs/session-purge/: spec.md
openspec/specs/session-registry/: spec.md
openspec/specs/startup-reminder/: spec.md
openspec/specs/state-locking/: spec.md
openspec/specs/sync-send-mode/: spec.md
plugin/: README.md  code-trace.ts
plugin/opencode/: code-trace.ts
plugin/pi-agent/: code-trace.ts
src/: cli.rs  config.rs  emit.rs  langfuse.rs  lib.rs  log.rs  main.rs  mask.rs  opencode.rs  payload.rs  pi_agent.rs  setup.rs  source.rs  state.rs  tags.rs  transcript.rs  turns.rs
tests/: cli_test.rs  concurrency_test.rs  fake_langfuse_test.rs  git_gate_test.rs  install_hook_test.sh  install_test.rs  integration_test.rs  sync_send_test.rs
tests/support/: fake_langfuse.rs  fake_langfuse_main.rs  mod.rs
(+18 files in other folders)
