[package]
name = "code-trace"
version = "0.1.0"
edition = "2021"
description = "Claude Code -> Langfuse trace hook"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
