[package]
name = "code-trace"
version = "0.3.0"
edition = "2021"
description = "Claude Code -> Langfuse trace hook"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
