[package]
name = "code-trace"
version = "0.3.2"
edition = "2021"
description = "Claude Code -> Langfuse trace hook"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
# Gates the fake-langfuse harness binary out of normal builds.
harness = []

# Declaring any [[bin]] disables bin auto-discovery, so the main binary
# must be declared explicitly too.
[[bin]]
name = "code-trace"
path = "src/main.rs"

[[bin]]
name = "fake-langfuse"
path = "tests/support/fake_langfuse_main.rs"
required-features = ["harness"]

[profile.release]
opt-level = "s"
lto = true
strip = true
